--- a/staging/rabbitmq-srv.yaml
+++ b/staging/rabbitmq-srv.yaml
@@ -3,9 +3,7 @@ kind: Service
 metadata:
   name: rabbit-mq-service
 spec:
-  type: LoadBalancer
-  clusterIP: 10.27.240.87
-  externalTrafficPolicy: Cluster
+  type: ClusterIP
   ports:
     - port: 5672
       name: rabbit-tcp
