--- a/staging/TrainingScheduler-srv.yaml
+++ b/staging/TrainingScheduler-srv.yaml
@@ -1,10 +1,13 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: training-scheduler-service
+  name: training-scheduler
+  labels:
+    run: training-scheduler
 spec:
   type: NodePort
   selector:
     app: training-scheduler
   ports:
     - port: 5007
+      protocol: TCP
