--- a/staging/ingress.yaml
+++ b/staging/ingress.yaml
@@ -1,10 +1,27 @@
+#apiVersion: extensions/v1beta1
+#kind: Ingress
+#metadata:
+#  name: main-ingress
+#  annotations:
+#    kubernetes.io/ingress.global-static-ip-name: "wisebeat-main-ip"
+#spec:
+#  rules:
+#  - http:
+#      paths:
+#      - path: /
+#        backend:
+#          serviceName: training-scheduler
+#          servicePort: 80
+
+
+
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: main-ingress
 spec:
   rules:
-  - http:
+   - http:
       paths:
       - path: /*
         backend:
