--- a/staging/ControllerService-dpl.yaml
+++ b/staging/ControllerService-dpl.yaml
@@ -40,7 +40,7 @@ spec:
             - name: PROJECT_ID
               value: 'samplergan'
             - name: PGHOST
-              value: '34.89.28.185'
+              value: 'sqlproxy-service-database1'
             - name: PGDATABASE
               value: 'ml-pipe-database'
             - name: PGUSER
