--- a/staging/GanService-dpl.yaml
+++ b/staging/GanService-dpl.yaml
@@ -41,4 +41,4 @@ spec:
             - name: PGPASSWORD
               value: 'aframgakk19'
             - name: GOOGLE_APPLICATION_CREDENTIALS
-              value: /var/secrets/google/key.json
+              value: 'bucket.json'
