--- a/staging/sql_proxy.yaml
+++ b/staging/sql_proxy.yaml
@@ -20,7 +20,7 @@ spec:
         command:
         - /cloud_sql_proxy
         - -dir=/cloudsql
-        - -instances=samplergan:europe-west2:wisebeatdata=tcp:0.0.0.0:5432,
+        - -instances=PROJECT_NAME:europe-west2:DATABASE_NAME=tcp:0.0.0.0:5432,
         - -credential_file=/credentials/credentials.json
         # set term_timeout if require graceful handling of shutdown
         # NOTE: proxy will stop accepting new connections; only wait on existing connections
